css/navbar.css
.navbar {
  display: flex;
  background: linear-gradient(to bottom, #fff, #fff0);
  padding: 12px 16px;
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  right: 0;
  z-index: 9999;
}

@media (prefers-color-scheme: dark) {
  .navbar {
    background: linear-gradient(to bottom, #000, #0000);
  }
}

.navbar--container {
  max-width: 800px;
  margin: 0 auto;
  width: 80%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

@media (max-width: 600px) {
  .navbar--container {
    width: 100%;
    padding-right: 2rem;
  }
}

.navbar--right {
  display: flex;
  width: fit-content;
  align-items: center;
  justify-content: center;
}

.logo {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 2.8em;
  height: 2.8em;
  border-radius: 50%;
  color: transparent;
  background: linear-gradient(to right, #f7f7f7, #40a0f9);
  transition: 0.3s all ease;
  transform: scale(0.9);
}

.logo:hover {
  transform: rotate(30deg) scale(0.8);
  opacity: 0.8;
}

.menu {
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.item {
  padding: 0 15px;
}

.item a {
  text-decoration: none;
  font-weight: 400;
  color: #090909;
  transition: 0.3s color ease;
}

@media (prefers-color-scheme: dark) {
  .item a {
    color: #f7f7f7;
  }

  .item a:hover,
  .item--active a,
  .button {
    color: #40a0f9;
  }
}

.item a:hover,
.item--active a,
.button {
  color: #2098f0;
}

button {
  background-color: #3080c9;
  color: #fff;
  border: none;
  padding: 8px 16px;
  font-size: 1em;
  border-radius: 4px;
  cursor: pointer;
  transition: 0.3s all ease;
}

button:hover {
  opacity: 0.8;
  transform: scale(0.9);
}

.button:hover {
  opacity: 0.8;
}

